src/objects/INV_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Article__c</fullName>
        <label>Article</label>
        <referenceTo>INV_Article__c</referenceTo>
        <relationshipLabel>INV Transaction_Article</relationshipLabel>
        <relationshipName>INV_Transaction_Article</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DestinationName__c</fullName>
        <formula>Destination__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DestinationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <referenceTo>INV_Client__c</referenceTo>
        <relationshipLabel>INV_Transaction_Destination</relationshipLabel>
        <relationshipName>INV_Transaction_Destination</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceName__c</fullName>
        <formula>Source__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SourceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <referenceTo>INV_Client__c</referenceTo>
        <relationshipLabel>INV_Transaction_Source</relationshipLabel>
        <relationshipName>INV_Transaction_Source</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>INV Transactions</relationshipLabel>
        <relationshipName>INV_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>INV Transaction</label>
    <nameField>
        <displayFormat>TRS-{00000}</displayFormat>
        <label>INV Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INV Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>